--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>VeloPost</title>
+	<link rel="stylesheet" href="../css/vpstyles.css">
 </head>
 <body>
 
-<nav></nav>
+<nav class="navbar"></nav>
 
 
 
