--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,12 +6,10 @@
 	<link rel="stylesheet" href="../css/vpstyles.css">
 </head>
 <body>
-
-<nav class="navbar"></nav>
-
-
-
-
+	<div class="navbar">
+	
+		
+	</div>
 
 
 
@@ -25,6 +23,11 @@
 
 
 
-<%=yield%>	
+
+
+<%=yield%>
+	<footer class="footer">
+		
+	</footer>	
 </body>
 </html>
