--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 <!--Sign up form area -->
 <div class="signup">
 	<h3>Sign up with us below!</h3>
-	<form action= '/signup' method= 'POST'>
+	<form action= '/signup' method='POST'>
 		<p>
 			<label for ='firstname'>First name</label>
 			<input type='text' name='firstname'>
@@ -27,7 +27,7 @@
 
 		<p>
 			<label for ='password'>Password</label>
-			<input type ='text' name='password'>
+			<input type ='password' name='password'>
 		</p>
 
 		<p>
