Added links and text to nav

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,10 +8,16 @@
 </head>
 <body>
 	<div class="navbar">
-		
 
-		
+		<ul class="toplinks">
+			<li><a href="/feed">Home |</a></li>
+			<li><a href="/profile">Profile |</a></li>
+			<li><a href="/accountsettings">Settings |</a></li>
+			<li><a href="/deleteaccount">Logout</a></li>
+			<li class='logo'>VeloPost</li>
+		</ul>
 	</div>
+
 
 
 
