Redirect delete account to delete page

--- a/views/asettings.erb
+++ b/views/asettings.erb
@@ -33,7 +33,7 @@
 				Bio: <input type="text">
 			</h4>
 			<h4>
-				Delete Account? Click <a href="">Here.</a>			
+				Delete Account? Click <a href="/deleteaccount">Here.</a>			
 			</h4>
 		</div>
 	</div>
