created sign-out route

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,6 @@
 <div class="jumboLogin">
-	<h1>VeloPost</h1>
+	<h1 class="jumbohead"><span>VeloPost</span></h1>
+	<h2 class="jumbohead"><span>Cycle much? Blog much? Then why not VeloPost?<span></h2>
 </div>
 
 <div>
