--- a/public/css/vpstyles.css
+++ b/public/css/vpstyles.css
@@ -42,6 +42,12 @@
 	width: 100%;
 	border: 1px solid black;
 	padding-top:50px;
+	background-image: url('../images/bgblur.jpg');
+	color: white;
+}
+
+.jumbohead span{
+	border: 1px solid white;
 
 }
 
@@ -104,7 +110,11 @@
 }
 
 
+/*FEED STYLES*/
 
+.feedbody {
+	padding-top:50px;
+}
 
 
 
