--- a/views/asettings.erb
+++ b/views/asettings.erb
@@ -9,31 +9,31 @@
 		<hr>
 		<div class="userinfo">
 			<h4>
-				First Name: <input type="text">
+				First Name: <input placeholder="<%= current_user.fname %>" type="text">
 			</h4>
 			<h4>
-				Last Name: <input type="text">
+				Last Name: <input placeholder="<%= current_user.lname %>" type="text">
 			</h4>
 			<h4>
-				Email: <input type="text">
+				Email: <input placeholder="<%= current_user.email %>" type="text">
 			</h4>
 			<h4>
-				Location: <input type="text">
+				Location: <input placeholder="<%= current_user.address %>"type="text">
 			</h4>
 			<h4>
-				Phone: <input type="text">
+				Phone: <input placeholder="<%= current_user.phone %>" type="text">
 			</h4>
 			<h4>
-				Gender: <input type="text">
+				Gender: <input placeholder="<%= current_user.gender %>" type="text">
 			</h4>
 			<h4>
-				Favorite Bike: <input type="text">
+				Favorite Bike: <input placeholder="<%= current_user.bikemodel %>" type="text">
 			</h4>
 			<h4>
-				Bio: <input type="text">
+				Bio: <input placeholder="<%= current_user.bio %>" type="text">
 			</h4>
 			<h4>
-				Delete Account? Click <a href="">Here.</a>			
+				Delete Account? Click <a href="/deleteaccount">Here.</a>			
 			</h4>
 		</div>
 	</div>
