--- a/views/feed.erb
+++ b/views/feed.erb
@@ -1,1 +1,10 @@
-<h1>feed</h1>
+<div class="feedbody">
+	
+	<h1>feed</h1>
+	<h1><%= "Hello #{current_user.fname if current_user} ! "%></h1>
+
+	<a href="/logout">Logout</a>
+
+</div>
+
+
