--- a/public/css/vpstyles.css
+++ b/public/css/vpstyles.css
@@ -11,6 +11,7 @@
 	border: 1px solid black;
 	background: white;
 	display: inline;
+	top: 0;
 
 
 }
@@ -108,10 +109,11 @@ li{
 }
 
 .userdetails{
-	text-align: center;
+	text-align: left;
 	width: 900px;
 	margin: 0 auto;
-
+	padding-left: 50px;
+	
 
 }
 
@@ -122,6 +124,7 @@ li{
 	margin-top: 5em;
 }
 
+/*LINK STYLES*/
 a:link{
 	text-decoration: none;
 	color: black;
