Fixed content boxes in landing page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,14 @@
-<div class="header">
+<!-- <div class="header">
 <h2>Velopost!</h2>
-</div>
+</div> -->
 <!--Intro to the landing page goes here-->
 <div class="intro">
-		<h1>Welcome to Velopost!</h1>
+		<h1><center>Welcome to Velopost!</center></h1>
 </div>
 
 <!--Sign up form area -->
 <div class="signup">
-	<h3>Sign up with us below!</h3>
+	<h3><center>Sign up with us!</center></h3>
 	<form action= '/signup' method='POST'>
 		<p>
 			<label for ='firstname'>First name</label>
