--- a/public/css/indexstyles.css
+++ b/public/css/indexstyles.css
@@ -1,43 +1,51 @@
 body {
-	/*background-color: orange;*/
+	background-image: url(../images/crank_shift.jpg);
+	color: white;
 }
 
 /*customized header for the layout page*/
-.header {
+/*.header {
 	margin: 0;
 	height: 4em;
 	width: 100%;
 	margin-left: -10px;
 	margin-top: -8px;
-	border: 1px solid black;
+	border: 1px solid white;
 }
-
+*/
 /*customized intro for the layout page*/
 .intro {
+	z-index: -1;
 	margin: 0;
 	height: 20em;
-	width: 100%;
-	margin-left: -10px;
-	margin-top: -8px;
-	border: 1px solid black;
+	width: 99%;
+	margin-left: -1px;
+	margin-top: -1px;
+	margin-right: -40px;
+	border: 1px solid white;
 }
 
 /*customized signup for the layout page*/
 .signup {
 	margin: 0;
-	height: 4em;
-	width: 100%;
-	margin-left: -10px;
-	margin-top: -8px;
-	border: 1px solid black;
+	height: 14em;
+	width: 35%;
+	float: left;
+	margin-left: -2px;
+	margin-top: 0px;
+	margin-bottom: 50px;
+	border: 1px solid white;
 }
 
 /*customized content for the layout page*/
 .content {
 	margin: 0;
-	height: 4em;
-	width: 100%;
-	margin-left: -10px;
-	margin-top: -8px;
-	border: 1px solid black;
+	height: 30em;
+	width: 64%;
+	float: right;
+	margin-left: -30px;
+	margin-right: 8px;
+	margin-top: 0px;
+	margin-bottom: -20px;
+	border: 1px solid white;
 }
