Profile page near complete

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,8 @@
 	<title>VeloPost!</title>
 	<link rel="stylesheet" type="text/css" href="css/indexstyles.css">
  	<link rel="stylesheet" href="../css/vpstyles.css">
+ 	<link rel="stylesheet" href="../css/profilestyle.css">
+
 </head>
 <body>
 	<div class="navbar">
@@ -38,7 +40,8 @@
 <%=yield%>
 	
 	<footer class="footer">
-		
+		<ul class='bottomlinks'>
+			<li>2015 VeloPost</li>
 	</footer>	
 </body>
 </html>
