--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,8 @@
 <h2>Velopost!</h2>
 </div> -->
 <!--Intro to the landing page goes here-->
+<body class= 'layout_body'>
+
 <div class="intro">
 		<h1><center>Welcome to Velopost!</center></h1>
 </div>
@@ -39,3 +41,4 @@
 <div class="content">
 	<div class="sub"></div>
 </div>
+</body>
