Fixed login issue

--- a/public/css/indexstyles.css
+++ b/public/css/indexstyles.css
@@ -1,6 +1,6 @@
 body {
-	background-image: url(../images/crank_shift.jpg);
-	color: white;
+/*	background-image: url(../images/crank_shift.jpg);*/
+	/*color: white;*/
 }
 
 /*customized header for the layout page*/
