--- a/public/css/indexstyles.css
+++ b/public/css/indexstyles.css
@@ -4,25 +4,28 @@
 }
 
 /*customized header for the layout page*/
-.header {
+/*.header {
 	margin: 0;
 	height: 4em;
 	width: 100%;
 	margin-left: -10px;
 	margin-top: -8px;
-	border: 1px solid white;
+	border: 1px solid white;*/
 }
 
 /*customized intro for the layout page*/
 .intro {
-	z-index: -1;
 	margin: 0;
 	height: 20em;
 	width: 99%;
 	margin-left: -1px;
-	margin-top: -1px;
+	/*margin-top: -1px;*/
 	margin-right: -40px;
 	border: 1px solid white;
+}
+
+.intro h1 {
+	padding-top: 50px;
 }
 
 /*customized signup for the layout page*/
