Updated some backend

--- a/public/css/profilestyle.css
+++ b/public/css/profilestyle.css
@@ -16,6 +16,16 @@
 	padding-top: 100px;
 	width: 60%;
 	margin-left: 375px;
+
+}
+
+.mainbody h1, .mainbody p, .followershead{
+	padding-left: 50px;
+}
+
+.followersprofiles {
+	display: inline-block;
+	padding: ;
 }
 .followershead{
 	width: 60%;
