--- a/public/css/indexstyles.css
+++ b/public/css/indexstyles.css
@@ -21,6 +21,7 @@
 	margin-left: -1px;
 	/*margin-top: -1px;*/
 	margin-right: -40px;
+	background: rgba(1,5,8, 0.6);
 	border: 1px solid white;
 }
 
@@ -37,6 +38,7 @@
 	margin-left: -2px;
 	margin-top: 0px;
 	margin-bottom: 50px;
+	background: rgba(1,5,8, 0.6);
 	border: 1px solid white;
 }
 
@@ -50,5 +52,6 @@
 	margin-right: 8px;
 	margin-top: 0px;
 	margin-bottom: -20px;
+	background: rgba(1,5,8, 0.6);
 	border: 1px solid white;
 }
