--- a/views/index.erb
+++ b/views/index.erb
@@ -39,6 +39,8 @@
 </div>
 
 <div class="content">
-	<div class="sub"></div>
+	<div class="sub">
+		<p>Velopost is a microblogging app created for the average everyday cyclist to share their thoughts and/or advice on cycling. These posts can range from images of bikes, cycling teams, thoughts on cycling rules, funny stories relating to biking and overall love for cycling. So, without further adeu, welcome to Velopost! Where cyclists come to peddle their thoughts!</p>
+	</div>
 </div>
 </body>
