--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,9 @@
-<!-- <div class="header">
-<h2>Velopost!</h2>
-</div> -->
 <!--Intro to the landing page goes here-->
 <body class= 'layout_body'>
 
 <div class="intro">
 		<h1><center>Welcome to Velopost!</center></h1>
+		<img src="../images/velo.jpg">
 </div>
 
 <!--Sign up form area -->
@@ -40,6 +38,7 @@
 
 <div class="content">
 	<div class="sub">
+	<img src="../images/cycle.jpg">
 		<p>Velopost is a microblogging app created for the average everyday cyclist to share their thoughts and/or advice on cycling. These posts can range from images of bikes, cycling teams, thoughts on cycling rules, funny stories relating to biking and overall love for cycling. So, without further adeu, welcome to Velopost! Where cyclists come to peddle their thoughts!</p>
 	</div>
 </div>
